Details
-
Bug
-
Status: Closed (View Workflow)
-
Minor
-
Resolution: Fixed
-
11.8, 12.2(EOL), 12.3, 13.0
-
Can result in unexpected behaviour
-
The REPAIR TABLE was reporting "stage done" in progress reporting to the client before the server had processed the REPAIR TABLE. This status message is now send to the client at the correct completed time.
-
Q2/2026 Server Maintenance
Description
CREATE TABLE t (c INT); |
REPAIR TABLE t; |
Leads to:
|
ES 11.4.10-7 34f616d5fd2c649d0c79acb4e2423c90b8f10436 (Debug, Clang 21.1.3-20250923) Build 23/01/2026 |
11.4.10-dbg>REPAIR TABLE t;
|
+--------+--------+----------+----------+stage done
|
| Table | Op | Msg_type | Msg_text |
|
+--------+--------+----------+----------+
|
| test.t | repair | status | OK |
|
+--------+--------+----------+----------+
|
1 row in set (0.014 sec)
|
Note the "stage done" CLI output bug. This is only for InnoDB tables, and only from 11.4+.