MDEV-38922 Fix cosmetic "stage done" output for REPAIR TABLE

report_progress_end() erases progress messages by overwriting them
with spaces. It was called immediately after query execution, before
the result set was fetched. Progress messages can arrive during
result fetching, so moving the call to after the result set is cached
ensures any such messages are erased before the result set is printed.

Signed-off-by: Amodh Dhakal <amodhakal@gmail.com>